--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,8 +21,8 @@ allprojects {
 rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
+// }
+// subprojects {
     project.evaluationDependsOn(':app')
 }
 
