--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  
+  box2d_flame: ^0.4.5
+  flame: ^0.18.1
+  shared_preferences: ^0.5.6+2
+  json_annotation: ^3.0.1
+  json_serializable: ^3.2.5
+  build_runner: ^1.7.4
+
+
 
 dev_dependencies:
+
   flutter_test:
     sdk: flutter
+
 
 
 # For information on the generic Dart part of this file, see the
@@ -23,7 +34,18 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
+  fonts:
+    - family: PTSans
+      fonts:
+        - asset: assets/fonts/PTSans-Regular.ttf
+        - asset: assets/fonts/PTSans-Italic.ttf
+          style: italic
+        - asset: assets/fonts/PTSans-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/PTSans-BoldItalic.ttf
+          style: italic
+          weight: 700
+            
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
