--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,7 +44,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "dev.wiisportsresorts.foo_bar"
+        applicationId "dev.wiisportsresorts.games.monument_platformer"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
