--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    package="dev.wiisportsresorts.foo_bar">
+    package="dev.wiisportsresorts.games.monument_platformer">
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -8,7 +8,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="foo_bar"
+        android:label="Monument Platformer"
         android:icon="@mipmap/icon">
         <activity
             android:name=".MainActivity"
