--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,15 @@
-name: foo_bar
-description: A new Flutter application.
-version: 1.0.0+1
+name: monument_platformer
+description: An open-source minimalist platformer game
+version: 0.1.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Cupertino Icons font
   cupertino_icons: ^0.1.2
   
   flame: ^0.18.1
@@ -22,14 +21,9 @@ dependencies:
 
 
 dev_dependencies:
-
   flutter_test:
     sdk: flutter
 
-
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
@@ -44,39 +38,18 @@ flutter:
         - asset: assets/fonts/PTSans-BoldItalic.ttf
           style: italic
           weight: 700
+    - family: Baloo
+      fonts:
+        - asset: assets/fonts/Baloo-Regular.ttf
+  assets:
+    - assets/bird-0.png
+    - assets/bird-1.png
+    - assets/bird-0-left.png
+    - assets/bird-1-left.png
+    - assets/cloud-1.png
+    - assets/cloud-2.png
+    - assets/cloud-3.png
             
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+
+  # Material Icons class
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
