--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ flutter:
   # Material Icons class
   uses-material-design: true
   fonts:
-    - family: PTSans
+    - family: PT Sans
       fonts:
         - asset: assets/fonts/PTSans-Regular.ttf
         - asset: assets/fonts/PTSans-Italic.ttf
@@ -39,6 +39,18 @@ flutter:
           weight: 700
         - asset: assets/fonts/PTSans-BoldItalic.ttf
           style: italic
+          weight: 700
+    - family: Fira Code
+      fonts:
+        - asset: assets/fonts/FiraCode-Light.ttf
+          weight: 300
+        - asset: assets/fonts/FiraCode-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/FiraCode-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/FiraCode-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/FiraCode-Bold.ttf
           weight: 700
     - family: Baloo
       fonts:
