--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,15 +15,14 @@ dependencies:
   flame: ^0.18.1
   shared_preferences: ^0.5.6+2
   json_annotation: ^3.0.1
-  json_serializable: ^3.2.5
-  build_runner: ^1.7.4
-
-  # won't build without for some reason
-  flutter_svg: ^0.17.4
+  path_provider: ^1.6.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  json_serializable: ^3.2.5
+  build_runner: ^1.7.4
 
 # Flutter specific config
 flutter:
