--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,10 @@ dependencies:
   # Cupertino Icons font
   cupertino_icons: ^0.1.2
 
-  flame: ^0.18.1
-  shared_preferences: ^0.5.6+2
+  flame: ^0.21.0
+  shared_preferences: ^0.5.7+2
   json_annotation: ^3.0.1
-  path_provider: ^1.6.7
+  path_provider: ^1.6.8
 
 dev_dependencies:
   flutter_test:
@@ -23,6 +23,7 @@ dev_dependencies:
 
   json_serializable: ^3.2.5
   build_runner: ^1.7.4
+  effective_dart: ^1.2.1
 
 # Flutter specific config
 flutter:
