--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,5 +2,5 @@ include: package:effective_dart/analysis_options.yaml
 
 analyzer:
   errors:
-    todo: ignore
+    # todo: ignore
     public_member_api_docs: ignore
